// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderEmail > matches the stored snapshots (structure and wording) > reset-en-text 1`] = `
"AIVORE

Reset your password

Hi Layla,

We received a request to reset the password of your account (layla@example.com). Use the button below to choose a new one.

This link works for 1 hour and can be used once.

If you didn't ask for this, ignore this email: your password stays the same.

To keep your account safe, don't forward this link to anyone.

Choose a new password:
https://aivore.example/verify-email?token=abc_DEF-123

--
This message was sent to layla@example.com because of activity on your AIVORE account.
"
`;

exports[`renderEmail > matches the stored snapshots (structure and wording) > verification-ar-html 1`] = `
"<!doctype html>
<html lang="ar" dir="rtl">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width,initial-scale=1">
<meta name="color-scheme" content="light dark">
<meta name="supported-color-schemes" content="light dark">
<title>أكّد بريدك الإلكتروني في AIVORE</title>
<style>
@media (prefers-color-scheme: dark){
body,.page{background:#100f1d!important}
.card{background:#1a1930!important}
.text,h1{color:#ecebf8!important}
.muted{color:#b4b3cf!important}
.rule{border-color:#2f2d4d!important}
}
@media only screen and (max-width:600px){
.card{border-radius:0!important}
.pad{padding:24px 20px!important}
}
</style>
</head>
<body class="page" dir="rtl" style="margin:0;padding:0;background:#f3f2f9">
<div style="display:none;max-height:0;overflow:hidden;opacity:0;color:transparent;mso-hide:all">خطوة واحدة وتبدأ الإبداع.</div>
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" dir="rtl" class="page" style="background:#f3f2f9"><tr><td align="center" style="padding:24px 12px">
<table role="presentation" width="560" cellpadding="0" cellspacing="0" border="0" dir="rtl" class="card" style="width:100%;max-width:560px;background:#ffffff;border-radius:16px;overflow:hidden">
<tr><td style="padding:20px 28px;background:#5b3df5;background-image:linear-gradient(135deg,#5b3df5,#1f9fd0);text-align:right"><span dir="ltr" style="font-family:-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;font-size:22px;font-weight:800;letter-spacing:3px;color:#ffffff;unicode-bidi:isolate">AIVORE</span></td></tr>
<tr><td class="pad" style="padding:32px 28px;font-family:Tahoma,'Segoe UI',Arial,sans-serif;text-align:right">
<h1 style="margin:0;color:#1b1a2e;font-family:Tahoma,'Segoe UI',Arial,sans-serif;font-size:24px;line-height:1.4;font-weight:700;text-align:right">أكّد بريدك الإلكتروني</h1>
<p class="text" style="margin:16px 0 0;color:#1b1a2e;font-size:16px;line-height:1.7;text-align:right">مرحبًا <span dir="auto" style="unicode-bidi:isolate">Layla</span>،</p>
<p class="text" style="margin:16px 0 0;color:#1b1a2e;font-size:16px;line-height:1.7;text-align:right">شكرًا لتسجيلك في AIVORE. أكّد أن <strong><span dir="ltr" style="unicode-bidi:isolate">layla@example.com</span></strong> هو بريدك الإلكتروني لتفعيل حسابك.</p>
<p class="muted" style="margin:16px 0 0;color:#5f5e78;font-size:14px;line-height:1.7;text-align:right">الرابط صالح لمدة <span dir="auto" style="unicode-bidi:isolate">٢٤ ساعة</span> ويُستخدم مرة واحدة فقط.</p>
<p class="muted" style="margin:16px 0 0;color:#5f5e78;font-size:14px;line-height:1.7;text-align:right">إن لم تنشئ حسابًا في AIVORE فتجاهل هذه الرسالة.</p>
<table role="presentation" cellpadding="0" cellspacing="0" border="0" dir="rtl" style="margin:28px 0 8px"><tr><td align="right" style="border-radius:12px;background:#5b3df5"><a href="https://aivore.example/verify-email?token=abc_DEF-123" style="display:inline-block;padding:14px 28px;border-radius:12px;background:#5b3df5;color:#ffffff;font-family:Tahoma,'Segoe UI',Arial,sans-serif;font-size:16px;font-weight:700;line-height:1.2;text-decoration:none">تأكيد البريد</a></td></tr></table>
<p class="muted" style="margin:16px 0 0;color:#5f5e78;font-size:13px;line-height:1.7;text-align:right">إن لم يعمل الزر، انسخ هذا الرابط والصقه في المتصفح:<br><a href="https://aivore.example/verify-email?token=abc_DEF-123" dir="ltr" style="color:#5b3df5;word-break:break-all;unicode-bidi:isolate">https://aivore.example/verify-email?token=abc_DEF-123</a></p>
<hr class="rule" style="margin:28px 0 0;border:0;border-top:1px solid #e4e2f0">
<p class="muted" style="margin:16px 0 0;color:#5f5e78;font-size:12px;line-height:1.7;text-align:right">أُرسلت هذه الرسالة إلى <span dir="ltr" style="unicode-bidi:isolate">layla@example.com</span> لوجود نشاط على حسابك في AIVORE.</p>
</td></tr>
</table>
</td></tr></table>
</body>
</html>"
`;

exports[`renderEmail > matches the stored snapshots (structure and wording) > verification-ar-text 1`] = `
"AIVORE

أكّد بريدك الإلكتروني

مرحبًا ⁨Layla⁩،

شكرًا لتسجيلك في AIVORE. أكّد أن ⁦layla@example.com⁩ هو بريدك الإلكتروني لتفعيل حسابك.

الرابط صالح لمدة ⁨٢٤ ساعة⁩ ويُستخدم مرة واحدة فقط.

إن لم تنشئ حسابًا في AIVORE فتجاهل هذه الرسالة.

تأكيد البريد:
https://aivore.example/verify-email?token=abc_DEF-123

--
أُرسلت هذه الرسالة إلى ⁦layla@example.com⁩ لوجود نشاط على حسابك في AIVORE.
"
`;

exports[`renderEmail > matches the stored snapshots (structure and wording) > verification-en-html 1`] = `
"<!doctype html>
<html lang="en" dir="ltr">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width,initial-scale=1">
<meta name="color-scheme" content="light dark">
<meta name="supported-color-schemes" content="light dark">
<title>Confirm your email address for AIVORE</title>
<style>
@media (prefers-color-scheme: dark){
body,.page{background:#100f1d!important}
.card{background:#1a1930!important}
.text,h1{color:#ecebf8!important}
.muted{color:#b4b3cf!important}
.rule{border-color:#2f2d4d!important}
}
@media only screen and (max-width:600px){
.card{border-radius:0!important}
.pad{padding:24px 20px!important}
}
</style>
</head>
<body class="page" dir="ltr" style="margin:0;padding:0;background:#f3f2f9">
<div style="display:none;max-height:0;overflow:hidden;opacity:0;color:transparent;mso-hide:all">One quick step and you can start creating.</div>
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" dir="ltr" class="page" style="background:#f3f2f9"><tr><td align="center" style="padding:24px 12px">
<table role="presentation" width="560" cellpadding="0" cellspacing="0" border="0" dir="ltr" class="card" style="width:100%;max-width:560px;background:#ffffff;border-radius:16px;overflow:hidden">
<tr><td style="padding:20px 28px;background:#5b3df5;background-image:linear-gradient(135deg,#5b3df5,#1f9fd0);text-align:left"><span dir="ltr" style="font-family:-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;font-size:22px;font-weight:800;letter-spacing:3px;color:#ffffff;unicode-bidi:isolate">AIVORE</span></td></tr>
<tr><td class="pad" style="padding:32px 28px;font-family:-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;text-align:left">
<h1 style="margin:0;color:#1b1a2e;font-family:-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;font-size:24px;line-height:1.4;font-weight:700;text-align:left">Confirm your email</h1>
<p class="text" style="margin:16px 0 0;color:#1b1a2e;font-size:16px;line-height:1.7;text-align:left">Hi <span dir="auto" style="unicode-bidi:isolate">Layla</span>,</p>
<p class="text" style="margin:16px 0 0;color:#1b1a2e;font-size:16px;line-height:1.7;text-align:left">Thanks for signing up for AIVORE. Confirm that <strong><span dir="ltr" style="unicode-bidi:isolate">layla@example.com</span></strong> is your address to activate your account.</p>
<p class="muted" style="margin:16px 0 0;color:#5f5e78;font-size:14px;line-height:1.7;text-align:left">This link works for <span dir="auto" style="unicode-bidi:isolate">24 hours</span> and can be used once.</p>
<p class="muted" style="margin:16px 0 0;color:#5f5e78;font-size:14px;line-height:1.7;text-align:left">If you didn&#39;t create an AIVORE account, you can ignore this email.</p>
<table role="presentation" cellpadding="0" cellspacing="0" border="0" dir="ltr" style="margin:28px 0 8px"><tr><td align="left" style="border-radius:12px;background:#5b3df5"><a href="https://aivore.example/verify-email?token=abc_DEF-123" style="display:inline-block;padding:14px 28px;border-radius:12px;background:#5b3df5;color:#ffffff;font-family:-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;font-size:16px;font-weight:700;line-height:1.2;text-decoration:none">Confirm email</a></td></tr></table>
<p class="muted" style="margin:16px 0 0;color:#5f5e78;font-size:13px;line-height:1.7;text-align:left">Button not working? Copy this link into your browser:<br><a href="https://aivore.example/verify-email?token=abc_DEF-123" dir="ltr" style="color:#5b3df5;word-break:break-all;unicode-bidi:isolate">https://aivore.example/verify-email?token=abc_DEF-123</a></p>
<hr class="rule" style="margin:28px 0 0;border:0;border-top:1px solid #e4e2f0">
<p class="muted" style="margin:16px 0 0;color:#5f5e78;font-size:12px;line-height:1.7;text-align:left">This message was sent to <span dir="ltr" style="unicode-bidi:isolate">layla@example.com</span> because of activity on your AIVORE account.</p>
</td></tr>
</table>
</td></tr></table>
</body>
</html>"
`;
